--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.8"
-version = "0.0.1.dev2"
+version = "0.0.2"
 
 [project.license]
 file = "LICENSE.txt"
