--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ description = "preparse arguments"
 keywords = []
 name = "preparse"
 readme = "README.rst"
-requires-python = ">=3.8"
-version = "0.0.3+local"
+requires-python = ">=3.11"
+version = "0.0.4"
 
 [project.license]
 file = "LICENSE.txt"
