--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.0.11+local"
+version = "0.0.11+local.1"
 
 [project.license]
 file = "LICENSE.txt"
