--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,14 @@ dependencies = [
     "click>=8.1.7",
     "datarepr>=0.0.4",
     "makeprop>=0.1.0",
+    "tofunc>=1.0.0",
 ]
 description = "preparse arguments"
 keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.0.11+local.1"
+version = "0.0.11+local.2"
 
 [project.license]
 file = "LICENSE.txt"
