--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,22 +20,21 @@ classifiers = [
 dependencies = [
     "click>=8.1.7",
     "datarepr>=0.0.4",
-    "makeprop>=0.1.0",
-    "tofunc>=1.0.0",
+    "makeprop>=0.1",
+    "tofunc>=1.0",
 ]
-description = "preparse arguments"
+description = "This project preparses args for further parsing later on."
 keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.0.11+local.8"
+version = "0.0.11+local.9"
 
 [project.license]
 file = "LICENSE.txt"
 
 [project.urls]
-Documentation = "https://pypi.org/project/preparse"
 Download = "https://pypi.org/project/preparse/#files"
-Index = "https://pypi.org/project/preparse"
-Source = "https://github.com/johannes-programming/preparse"
+Index = "https://pypi.org/project/preparse/"
+Source = "https://github.com/johannes-programming/preparse/"
 Website = "https://preparse.johannes-programming.online/"
