--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.0.12"
+version = "0.0.12+local"
 
 [project.license]
 file = "LICENSE.txt"
