--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.1.0.dev0"
+version = "0.1.0.dev0+docs.4"
 
 [project.license]
 file = "LICENSE.txt"
