--- a/src/preparse/tests/expit.toml
+++ b/src/preparse/tests/expit.toml
@@ -1,5 +1,7 @@
 [[data]]
-query = ["0.5"]
+query = [
+    "0.5",
+]
 exit_code = 0
 output = "0.6224593312018546\n"
 prog = nan
@@ -7,7 +9,9 @@ stdout = "0.6224593312018546\n"
 stderr = ""
 
 [[data]]
-query = ["0"]
+query = [
+    "0",
+]
 exit_code = 0
 output = "0.5\n"
 prog = nan
@@ -15,7 +19,9 @@ stdout = "0.5\n"
 stderr = ""
 
 [[data]]
-query = ["1"]
+query = [
+    "1",
+]
 exit_code = 0
 output = "0.7310585786300049\n"
 prog = nan
@@ -23,7 +29,10 @@ stdout = "0.7310585786300049\n"
 stderr = ""
 
 [[data]]
-query = ["--", "-1"]
+query = [
+    "--",
+    "-1",
+]
 exit_code = 0
 output = "0.2689414213699951\n"
 prog = nan
@@ -31,41 +40,31 @@ stdout = "0.2689414213699951\n"
 stderr = ""
 
 [[data]]
-query = ["-h"]
+query = [
+    "-h",
+]
 exit_code = 0
-output = """Usage: main [OPTIONS] X
-
-  applies the expit function to x
-
-Options:
-  -h, --help     Show this message and exit.
-  -V, --version  Show the version and exit.
-"""
-
+output = "Usage: main [OPTIONS] X\n\n  applies the expit function to x\n\nOptions:\n  -h, --help     Show this message and exit.\n  -V, --version  Show the version and exit.\n"
 prog = nan
 stdout = nan
 stderr = nan
 
-
-
-
 [[data]]
-query = ["-V"]
+query = [
+    "-V",
+]
 exit_code = 0
 output = "main, version 1.2.3\n"
 prog = nan
 stdout = nan
 stderr = nan
 
-
-
 [[data]]
-query = ["invalid"]
+query = [
+    "invalid",
+]
 exit_code = 2
 output = nan
 prog = nan
 stdout = nan
-stderr = """Usage: main [OPTIONS] X
-
-Error: Invalid value for 'X': 'invalid' is not a valid float.
-"""
+stderr = "Usage: main [OPTIONS] X\n\nError: Invalid value for 'X': 'invalid' is not a valid float.\n"
