--- a/src/preparse/tests/expit.toml
+++ b/src/preparse/tests/expit.toml
@@ -65,6 +65,6 @@ query = [
 ]
 exit_code = 2
 output = nan
-prog = nan
-stdout = nan
-stderr = "Usage: main [OPTIONS] X\n\nError: Invalid value for 'X': 'invalid' is not a valid float.\n"
+prog = "test_invalid_argument"
+stdout = ""
+stderr = "Usage: test_invalid_argument [OPTIONS] X\n\nError: Invalid value for 'X': 'invalid' is not a valid float.\n"
