--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.2.0+master.split.shortonly"
+version = "0.2.0+master.warnings"
 
 [project.license]
 file = "LICENSE.txt"
