--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.1.12"
+version = "0.1.12+local"
 
 [project.license]
 file = "LICENSE.txt"
