--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "datahold>=1.1.10,<2",
     "datarepr>=1.0.2,<2",
     "overloadable>=1.0.9,<2",
+    "setdoc>=1.2.6,<2",
     "tofunc>=1.0,<2",
 ]
 description = "This project preparses args for further parsing later on."
