--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     { email = "johannes.programming@gmail.com", name = "Johannes" },
 ]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
@@ -20,10 +20,13 @@ classifiers = [
 ]
 dependencies = [
     "click>=8.2,<9",
-    "datahold>=1.1.10,<2",
+    "cmp3>=0.5.1,<1",
+    "copyable>=1.0,<2",
+    "datahold>=3.0,<4",
     "datarepr>=1.0.2,<2",
     "overloadable>=1.0.9,<2",
-    "setdoc>=1.2.6,<2",
+    "scaevola>=1.1.1,<2",
+    "setdoc>=1.2.8,<2",
     "tofunc>=1.0,<2",
 ]
 description = "This project preparses args for further parsing later on."
@@ -31,7 +34,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "0.1.12+local"
+version = "1.0.0"
 
 [project.license]
 file = "LICENSE.txt"
