--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,10 @@ dependencies = [
     "cmp3>=1.0,<2",
     "copyable>=1.0,<2",
     "datahold>=3.0,<4",
-    "datarepr>=1.0.2,<2",
-    "overloadable>=1.0.9,<2",
-    "scaevola>=1.1.1,<2",
-    "setdoc>=1.2.8,<2",
+    "datarepr>=1.1,<2",
+    "frozendict>=2.4.7,<3",
+    "overloadable>=1.1,<2",
+    "setdoc>=1.2.9,<2",
     "tofunc>=1.0,<2",
 ]
 description = "This project preparses args for further parsing later on."
@@ -34,7 +34,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.0.2"
+version = "1.0.7"
 
 [project.license]
 file = "LICENSE.txt"
