--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,9 @@ dependencies = [
     "copyable>=1.0,<2",
     "datahold>=3.0,<4",
     "datarepr>=1.1,<2",
+    "frozendict>=2.4.7,<3",
     "overloadable>=1.1,<2",
-    "setdoc>=1.2.8,<2",
+    "setdoc>=1.2.9,<2",
     "tofunc>=1.0,<2",
 ]
 description = "This project preparses args for further parsing later on."
@@ -33,7 +34,7 @@ keywords = []
 name = "preparse"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.0.5"
+version = "1.0.6"
 
 [project.license]
 file = "LICENSE.txt"
